<resources>
    <string name="app_name">TriviaGameApplication</string>
    <string name="play_learn"><![CDATA[Play & Learn]]></string>
    <string name="subtitle">Want to see how well \n you fare against our \n questions?</string>
    <string name="test_me">Test Me</string>
    <string name="start_game">START GAME</string>
    <string name="past_results">Past Results</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="select_category">Select category</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="question">Question</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="user_answer">Your answer is %s</string>
</resources>