<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/congrats"
    android:paddingHorizontal="20dp"
    tools:context=".StartGameActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/start_game" />

    <EditText
        android:id="@+id/edtNumOfQuestions"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="120dp"
        android:background="@color/_30898989"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/number_of_questions"
        android:paddingStart="20dp"
        android:inputType="number"
        android:textColor="@color/gray89"
        android:textColorHint="@color/gray89"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/edtSelectCategory"
        app:layout_constraintTop_toBottomOf="@id/edtNumOfQuestions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:hint="@string/select_category"
        android:editable="false"
        android:inputType="none"
        android:textColorHint="@color/gray89"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="18sp"
        android:textColor="@color/gray89"
        android:background="@color/_30898989"
        android:paddingStart="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/edtSelectDifficulty"
        app:layout_constraintTop_toBottomOf="@id/edtSelectCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:hint="@string/select_difficulty"
        android:textColorHint="@color/gray89"
        android:background="@color/_30898989"
        android:paddingStart="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/gray89"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:id="@+id/btnStartGame"
        app:layout_constraintTop_toBottomOf="@id/edtSelectDifficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>